tests/syntax_error/type_bad_parentheses.jou
def foo(
    x: (int),
    y: ((((int)))),
    z: (int bruh),  # Error: expected a ')', got a variable name 'bruh'
) -> None:
    pass
